# ts4900-utils

./: .clang-format  .gitignore  LICENSE  Makefile.am  Makefile.in  README.md  configure  configure.ac
script/: Makefile.am  tssilomon  tssilomon.service
src/: .gitignore  Makefile  Makefile.am  Makefile.in  adc8390.c  adc8390.h  crossbar-ts4900.h  crossbar-ts7970.h  crossbar-ts7990.h  fpga.c  fpga.h  gpiolib-fast.c  gpiolib-fast.h  gpiolib.c  gpiolib.h  isl12020rtc.c  ispvm.c  ispvm.h  load_fpga-ts7970.c  load_fpga-ts7970.h  load_fpga-ts7990.c  load_fpga-ts7990.h  load_fpga.c  micro.c  micro.h  nvram.c  rtctemp.c  rtctemp.h  tshwctl.c  tsmicroctl.c  tsmicroupdate.c  vmopcode.h
